<resources>
<!--    Shared preference file-->
    <string name="SHARED_PREF_FILE" translatable="false">uk.ac.rgu.showlist</string>
    <string name="SHARED_PREF_FILE_SORT" translatable="false">personalised_sort</string>

<!--    The List names in database-->
<!--    for good coding practice the list names should always stay
        consistent even when the application is further built-->
    <string name="listToWatch" translatable="false">toWatchList</string>
    <string name="listSeen" translatable="false">seenList</string>


    <!--    Pages-->
    <string name="app_name">Showlist</string>
    <string name="gameDescription">Show Description</string>
    <string name="developerResource">Developer</string>
    <string name="homeButton">Home</string>
    <string name="loginButton">Login</string>
    <string name="searchButton">Search</string>
    <string name="myShowsButton">My Seen Shows</string>
    <string name="profileButton">Profile</string>
    <string name="homeTitle">New Shows</string>
    <string name="showsWatchedTitle">Shows Watched</string>
    <string name="favGame">Favorite Shows</string>
    <string name="watchedButton">Watched</string>
    <string name="searchHint">Show Title</string>
    <string name="myWatchList">Watch Later</string>
    <string name="tv_watchlist">Watch Later</string>
    <string name="favourite_btn">Favourite</string>
    <string name="tv_Description">Description</string>
    <string name="tv_airdateTitle">First Released</string>
    <string name="tv_userRatingTitle">User Rating</string>
    <string name="btn_CheckOnline">Check Online</string>
    <string name="btn_addToMyShow">Seen</string>
    <string name="btn_addWatchList">Watch Later</string>
    <string name="iv_ContentDescription">Image Of the Show</string>
    <string name="menu_deleteAllShow">Delete all Data</string>

<!--    GUIDE-->
    <string name="tv_infoGuide">Application Guide</string>
    <string name="tv_titleGuide">Lucifer</string>
    <string name="tv_releaseGuide">2016-01-25</string>
    <string name="tv_guideDescription3">After searching you can clear the search and hit the search button to clear the search
    and start browsing the front page again</string>
    <string name="tv_guideDescription1">To add a show to one of your lists you can slide
        Right to add to the Seen list and Left to need to watch later list.
        In the List view you can also swipe either way to delete the show from the list.</string>
    <string name="tv_guideDescription2">Click one of the buttons to View your Lists</string>
    <string name="ImageDescription">"TMDB"</string>

<!--    Settings-->
    <string name="tv_settings">Settings</string>
    <string name="sp_titlePreferences">How would you like to sort the main page?</string>
    <string name="settingsMenu">Settings</string>
    <string name="btn_save">Save</string>


    <string-array name="sp_sort">
        <item>Popularity Descending</item>
        <item>Popularity Ascending</item>
        <item>Release Date Descending</item>
        <item>Release Date Ascending</item>
        <item>User rating Descending</item>
        <item>User rating Ascending</item>
    </string-array>


</resources>