<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2C3D"
    tools:context=".application_guide">


    <TextView
        android:id="@+id/tv_activityTitleGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#1E2430"
        android:gravity="center"
        android:text="@string/tv_infoGuide"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_nameGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_titleGuide"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_imgGuide"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide1" />

    <TextView
        android:id="@+id/tv_ratingGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_releaseGuide"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintStart_toEndOf="@+id/iv_imgGuide"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameGuide" />

    <ImageView
        android:id="@+id/iv_imgGuide"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/iv_ContentDescription"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ratingGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_nameGuide"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_guide1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/tv_guideDescription1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activityTitleGuide" />

    <TextView
        android:id="@+id/tv_guide2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_guideDescription2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ratingGuide" />

    <Button
        android:id="@+id/btn_myListGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="#1E2430 "
        android:text="@string/myShowsButton"
        android:textColor="#08FA46"
        app:backgroundTint="#1E2430 "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_watchListGuide"
        app:layout_constraintTop_toTopOf="@+id/btn_watchListGuide" />

    <Button
        android:id="@+id/btn_watchListGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#1E2430 "
        android:text="@string/myWatchList"
        android:textColor="#08FA46"
        app:backgroundTint="#1E2430 "
        app:layout_constraintEnd_toStartOf="@+id/btn_myListGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide2" />

    <TextView
        android:id="@+id/tv_guide3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_guideDescription3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_myListGuide" />

    <ImageView
        android:id="@+id/iv_imgGuide2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/ImageDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide3"
        app:srcCompat="@drawable/tmdbatr" />

</androidx.constraintlayout.widget.ConstraintLayout>