<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2C3D"
    tools:context=".myWatchlist">


    <TextView
        android:id="@+id/tv_pageMyWatchlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#1E2430"
        android:gravity="center"
        android:text="@string/tv_watchlist"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_myMyShowListNameSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1E2430"
        android:ems="10"
        android:freezesText="false"
        android:gravity="center"
        android:hint="@string/searchHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="@+id/btn_myShowListSubmit"
        app:layout_constraintEnd_toStartOf="@+id/btn_myShowListSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pageMyWatchlist"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_myShowListSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#1E2430"
        android:text="@string/searchButton"
        android:textColor="#08FA46"
        app:backgroundTint="#1E2430"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pageMyWatchlist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_myWatchlistOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_myMyShowListNameSearch">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>