<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2C3D ">

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1E2430 "
        android:text="@string/homeButton"
        android:textColor="#08FA46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_gameImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Super Mario 64"
        android:textColor="#08FA46"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_gameImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/gameDescription"
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="@+id/iv_gameImg"
        app:layout_constraintStart_toStartOf="@+id/iv_gameImg"
        app:layout_constraintTop_toBottomOf="@+id/iv_gameImg" />

    <Button
        android:id="@+id/btn_favoriteGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="#1B2C3D "
        android:text="Favourite"
        android:textColor="#08FA46"
        app:layout_constraintEnd_toStartOf="@+id/iv_gameImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_descOutput"
        android:layout_width="327dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:text="Super Mario 64 is a 1996 platform game for the Nintendo 64 and the first in the Super Mario series to feature 3D gameplay."
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="@+id/tv_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/tv_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/developerResource"
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descOutput" />

    <TextView
        android:id="@+id/tv_devOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Nintendo"
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="@+id/tv_dev"
        app:layout_constraintStart_toStartOf="@+id/tv_dev"
        app:layout_constraintTop_toBottomOf="@+id/tv_dev" />

</androidx.constraintlayout.widget.ConstraintLayout>